--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "dotenv": "^8.2.0",
+    "emotion-theming": "^10.0.27",
     "gatsby": "^2.24.66",
     "gatsby-image": "^2.4.20",
+    "gatsby-plugin-catch-links": "^2.3.15",
+    "gatsby-plugin-chakra-ui": "^0.1.4",
+    "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-manifest": "^2.4.32",
     "gatsby-plugin-offline": "^3.2.29",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.37",
-    "gatsby-source-filesystem": "^2.3.31",
+    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-transformer-remark": "^2.8.47",
     "gatsby-transformer-sharp": "^2.5.16",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
