--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-catch-links": "^2.3.15",
     "gatsby-plugin-chakra-ui": "^0.1.4",
     "gatsby-plugin-google-analytics": "^2.3.19",
+    "gatsby-plugin-google-tagmanager": "^2.8.0",
     "gatsby-plugin-manifest": "^2.4.32",
     "gatsby-plugin-offline": "^3.2.38",
     "gatsby-plugin-react-helmet": "^3.3.12",
